changes in business_screen4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,16 @@ flutter:
     - assets/dg21.png
     - assets/dg22.png
     - assets/dg23.png
+    - assets/dg24.png
+    - assets/dg25.png
+    - assets/dg26.png
+    - assets/dg27.png
+    - assets/dg28.png
+    - assets/dg29.png
+    - assets/dg30.png
+    - assets/dg31.png
+    - assets/dg32.png
+    - assets/dg33.png
 
 
   # To add assets to your application, add an assets section, like this:
