--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/home_img/
+    - assets/home_img/customers/
+    - assets/home_img/suppliers/
+    - assets/home_img/banks/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
