--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,15 @@ dependencies:
   flutter_emoji: ^2.2.0
   animate_do: ^3.3.4
   flutter_animate: ^4.0.0
-  firebase_core: ^3.3.0
-  firebase_auth: ^5.1.4
+  firebase_core: ^2.11.0
+  firebase_analytics: ^10.2.0
+  firebase_auth: ^4.9.0
+  firebase_messaging: ^14.4.0
+  firebase_dynamic_links: ^5.1.0
+  firebase_database: ^10.1.0
+  firebase_app_check: ^0.1.2+1
+  firebase_crashlytics: ^3.1.0
+  get: ^4.6.6
 
 
 
